// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker should render picker with coins icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Picker
    icon="coins"
    label=""
    onPress={[MockFunction]}
    placeholder="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <Coins
          scale={0.4}
        />,
        <View
          style={
            Object {
              "marginLeft": 40,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>
        </View>,
        <Image
          source={1}
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "borderBottomColor": "rgb(204,204,204)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "height": 50,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "scale": 0.4,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>,
          "style": Object {
            "marginLeft": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginLeft": "auto",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "rgba(255,255,255,0.7)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <Coins
            scale={0.4}
          />,
          <View
            style={
              Object {
                "marginLeft": 40,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>
          </View>,
          <Image
            source={1}
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.7)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(204,204,204)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 50,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "scale": 0.4,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "marginLeft": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "rgb(51,51,51)",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginLeft": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Picker should render with overlay & label  1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Picker
    icon="heart"
    label="test label"
    onPress={[MockFunction]}
    placeholder="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <BoxedHeart
          scale={0.5}
        />,
        <View
          style={
            Object {
              "marginLeft": 40,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test label
          </YuText>
        </View>,
        <Image
          source={1}
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />,
        null,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "borderBottomColor": "rgb(106,106,106)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "height": 50,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "scale": 0.5,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test label
          </YuText>,
          "style": Object {
            "marginLeft": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "test label",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "test label",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginLeft": "auto",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <BoxedHeart
            scale={0.5}
          />,
          <View
            style={
              Object {
                "marginLeft": 40,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test label
            </YuText>
          </View>,
          <Image
            source={1}
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          />,
          null,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(106,106,106)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 50,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test label
            </YuText>,
            "style": Object {
              "marginLeft": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test label",
              "style": Object {
                "color": "rgb(51,51,51)",
              },
            },
            "ref": null,
            "rendered": "test label",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginLeft": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Picker should render with the placeholder 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Picker
    icon="heart"
    label=""
    onPress={[MockFunction]}
    placeholder="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <BoxedHeart
          scale={0.5}
        />,
        <View
          style={
            Object {
              "marginLeft": 40,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>
        </View>,
        <Image
          source={1}
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "borderBottomColor": "rgb(204,204,204)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "height": 50,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "scale": 0.5,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>,
          "style": Object {
            "marginLeft": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginLeft": "auto",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "rgba(255,255,255,0.7)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <BoxedHeart
            scale={0.5}
          />,
          <View
            style={
              Object {
                "marginLeft": 40,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>
          </View>,
          <Image
            source={1}
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.7)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(204,204,204)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 50,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "marginLeft": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "rgb(51,51,51)",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginLeft": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Picker should render without overlay 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Picker
    icon="heart"
    label=""
    onPress={[MockFunction]}
    placeholder="test"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": Array [
        <BoxedHeart
          scale={0.5}
        />,
        <View
          style={
            Object {
              "marginLeft": 40,
            }
          }
        >
          <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>
        </View>,
        <Image
          source={1}
          style={
            Object {
              "marginLeft": "auto",
            }
          }
        />,
        <View
          style={
            Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />,
      ],
      "onPress": [MockFunction],
      "style": Object {
        "alignItems": "center",
        "borderBottomColor": "rgb(204,204,204)",
        "borderBottomWidth": 1,
        "flex": 1,
        "flexDirection": "row",
        "height": 50,
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "scale": 0.5,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <YuText
            style={
              Object {
                "color": "rgb(51,51,51)",
              }
            }
          >
            test
          </YuText>,
          "style": Object {
            "marginLeft": 40,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "test",
            "style": Object {
              "color": "rgb(51,51,51)",
            },
          },
          "ref": null,
          "rendered": "test",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "source": 1,
          "style": Object {
            "marginLeft": "auto",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "style": Object {
            "backgroundColor": "rgba(255,255,255,0.7)",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": Array [
          <BoxedHeart
            scale={0.5}
          />,
          <View
            style={
              Object {
                "marginLeft": 40,
              }
            }
          >
            <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>
          </View>,
          <Image
            source={1}
            style={
              Object {
                "marginLeft": "auto",
              }
            }
          />,
          <View
            style={
              Object {
                "backgroundColor": "rgba(255,255,255,0.7)",
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          />,
        ],
        "onPress": [MockFunction],
        "style": Object {
          "alignItems": "center",
          "borderBottomColor": "rgb(204,204,204)",
          "borderBottomWidth": 1,
          "flex": 1,
          "flexDirection": "row",
          "height": 50,
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "scale": 0.5,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              style={
                Object {
                  "color": "rgb(51,51,51)",
                }
              }
            >
              test
            </YuText>,
            "style": Object {
              "marginLeft": 40,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "test",
              "style": Object {
                "color": "rgb(51,51,51)",
              },
            },
            "ref": null,
            "rendered": "test",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "source": 1,
            "style": Object {
              "marginLeft": "auto",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "style": Object {
              "backgroundColor": "rgba(255,255,255,0.7)",
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
